--- a/manual/index.html
+++ b/manual/index.html
@@ -508,7 +508,7 @@ function transformManualHTML(h) {
 	// script img iframe link
 	Array.from(h.querySelectorAll('script, img, iframe, link')).forEach(s => {
 		const abspath = /githack\.com/.test(location.origin) 
-			? location.origin + /([^/]+?\/[^/]+?\/[^/]+)\/*/.exec(location.pathname)[1]
+			? location.origin + /\/([^/]+?\/[^/]+?\/[^/]+)\//.exec(location.pathname)[1]
 			: location.origin;
 		const attr = (s.nodeName === 'LINK') ? 'href' : 'src'; 
 		const url = new URL(s[attr], `${abspath}${location.pathname}`);
