--- a/manual/index.html
+++ b/manual/index.html
@@ -509,9 +509,9 @@ function transformManualHTML(h) {
 	Array.from(h.querySelectorAll('script, img, iframe, link')).forEach(s => {
 		const abspath = /githack\.com/.test(location.origin) 
 			? location.origin + /(\/[^/]+?\/[^/]+?\/[^/]+)\/*/.exec(location.pathname)[1]
-			: location.origin;
+			: location.origin + location.pathname;
 		const attr = (s.nodeName === 'LINK') ? 'href' : 'src'; 
-		const url = new URL(s[attr], `${abspath}${location.pathname}`);
+		const url = new URL(s[attr], abspath);
 		s[attr] = url.href;
 	});
 
