Curves: use ES Modules export

--- a/examples/webgl_geometries_parametric.html
+++ b/examples/webgl_geometries_parametric.html
@@ -29,7 +29,7 @@
 
 			import Stats from './jsm/libs/stats.module.js';
 
-			import { Curves } from './jsm/curves/CurveExtras.js';
+			import * as Curves from './jsm/curves/CurveExtras.js';
 			import { ParametricGeometry } from './jsm/geometries/ParametricGeometry.js';
 			import { ParametricGeometries } from './jsm/geometries/ParametricGeometries.js';
 
