LDrawUtils: use ES Module export

--- a/examples/webgl_loader_ldraw.html
+++ b/examples/webgl_loader_ldraw.html
@@ -42,7 +42,7 @@
 			import { RoomEnvironment } from './jsm/environments/RoomEnvironment.js';
 
 			import { LDrawLoader } from './jsm/loaders/LDrawLoader.js';
-			import { LDrawUtils } from './jsm/utils/LDrawUtils.js';
+			import * as LDrawUtils from './jsm/utils/LDrawUtils.js';
 
 			let container, progressBarDiv;
 
