--- a/manual/index.html
+++ b/manual/index.html
@@ -507,20 +507,13 @@
 function transformManualHTML(h) {
 	// script img iframe link
 	Array.from(h.querySelectorAll('script, img, iframe, link')).forEach(s => {
-		if (/githack\.com/.test(location.origin)) {
-			debugger;
-			const tuple = /(\/[^/]+?\/[^/]+?\/[^/]+)\/*/.exec(location.pathname)[1];
-			const p = (s.nodeName === 'LINK') ? 'href' : 'src';
-			const v = s.getAttribute(p);
-			const base = v.startsWith('/') 
-				? location.origin + tuple + '/'
-				: location.origin + '/';
-			s.setAttribute(p, base + s[p].slice(location.origin.length + 1));
-		} else {
-			if (s.nodeName === 'LINK') {
+		if (s.nodeName === 'LINK') {
+			if (s.href) {
 				const url = new URL(s.href, `${location.origin}${location.pathname}`);
 				s.href = url.href;
-			} else {
+			}
+		} else {
+			if (s.src) {
 				const url = new URL(s.src, `${location.origin}${location.pathname}`);
 				s.src = url.href;
 			}
