--- a/manual/index.html
+++ b/manual/index.html
@@ -532,7 +532,7 @@ function transformManualHTML(h) {
 		s.textContent = `
 		{
 			"imports": {
-				"three": "${location.origin}/build/three.module.js"
+				"three": "${location.href.slice(0, location.href.indexOf('manual'))}build/three.module.js"
 			}
 		}	
 		`
