--- a/manual/examples/resources/editor.html
+++ b/manual/examples/resources/editor.html
@@ -249,7 +249,7 @@ button:focus {
         <div class="js"><div class="files"></div><div class="code"></div></div>
         <div class="html"><div class="files"></div><div class="code"></div></div>
         <div class="css"><div class="files"></div><div class="code"></div></div>
-        <div class="result"><iframe></iframe></div>
+        <div class="result"><iframe sandbox="allow-same-origin allow-scripts"></iframe></div>
         <div class="other">
           <div>
             <div><a href="/"><span data-subst="textContent|name"></span>&nbsp;</a><a href="/"><img data-subst="src|icon" width="64" height="64"/></a></div>
