--- a/manual/index.html
+++ b/manual/index.html
@@ -44,7 +44,7 @@
 
 		</div>
 
-		<iframe name="viewer"></iframe>
+		<iframe name="viewer" sandbox="allow-same-origin allow-scripts"></iframe>
 
 		<script>
 
