--- a/manual/examples/primitives-text.html
+++ b/manual/examples/primitives-text.html
@@ -93,7 +93,7 @@ function main() {
     }
 
     async function doit() {
-      const font = await loadFont('/examples/fonts/helvetiker_regular.typeface.json');   /* threejs.org: url */
+      const font = await loadFont('/../../examples/fonts/helvetiker_regular.typeface.json');   /* threejs.org: url */
       const geometry = new TextGeometry('three.js', {
         font: font,
         size: 3.0,
