--- a/manual/examples/primitives.html
+++ b/manual/examples/primitives.html
@@ -271,7 +271,7 @@ function main() {
     }
 
     async function doit() {
-      const font = await loadFont('/examples/fonts/helvetiker_regular.typeface.json');  /* threejs.org: url */
+      const font = await loadFont('/../../examples/fonts/helvetiker_regular.typeface.json');  /* threejs.org: url */
       const geometry = new TextGeometry('three.js', {
         font: font,
         size: 3.0,
