Manual: Hide export button.

--- a/manual/examples/resources/editor.html
+++ b/manual/examples/resources/editor.html
@@ -190,6 +190,9 @@ button:focus {
     border-bottom: none !important;
     border-top: 5px solid #666 !important;
 }
+.button-export {
+	display: none; /* TODO: Fix export with import maps */
+}
 .button-result {
     margin-left: 2em !important;
 }
