Manual: Clean up examples.

--- a/manual/examples/game-check-animations.html
+++ b/manual/examples/game-check-animations.html
@@ -41,13 +41,13 @@
       height: 1em;
       background-color: #888;
       background-image: linear-gradient(
-        -45deg, 
-        rgba(255, 255, 255, .5) 25%, 
-        transparent 25%, 
-        transparent 50%, 
-        rgba(255, 255, 255, .5) 50%, 
-        rgba(255, 255, 255, .5) 75%, 
-        transparent 75%, 
+        -45deg,
+        rgba(255, 255, 255, .5) 25%,
+        transparent 25%,
+        transparent 50%,
+        rgba(255, 255, 255, .5) 50%,
+        rgba(255, 255, 255, .5) 75%,
+        transparent 75%,
         transparent
       );
       background-size: 50px 50px;
@@ -94,6 +94,7 @@ import * as SkeletonUtils from '../../examples/jsm/utils/SkeletonUtils.js';
 function main() {
   const canvas = document.querySelector('#c');
   const renderer = new THREE.WebGLRenderer({canvas});
+  renderer.outputEncoding = THREE.sRGBEncoding;
 
   const fov = 45;
   const aspect = 2;  // the canvas default
@@ -111,7 +112,7 @@ function main() {
 
   function addLight(...pos) {
     const color = 0xFFFFFF;
-    const intensity = 1;
+    const intensity = 0.8;
     const light = new THREE.DirectionalLight(color, intensity);
     light.position.set(...pos);
     scene.add(light);
@@ -246,4 +247,3 @@ function main() {
 main();
 </script>
 </html>
-
