--- a/manual/examples/cleanup-loaded-files.html
+++ b/manual/examples/cleanup-loaded-files.html
@@ -107,6 +107,7 @@ class ResourceTracker {
 function main() {
   const canvas = document.querySelector('#c');
   const renderer = new THREE.WebGLRenderer({canvas});
+  renderer.outputEncoding = THREE.sRGBEncoding;
 
   const fov = 75;
   const aspect = 2;  // the canvas default
@@ -120,7 +121,7 @@ function main() {
 
   function addLight(...pos) {
     const color = 0xFFFFFF;
-    const intensity = 1;
+    const intensity = 0.8;
     const light = new THREE.DirectionalLight(color, intensity);
     light.position.set(...pos);
     scene.add(light);
