--- a/manual/examples/game-player-input.html
+++ b/manual/examples/game-player-input.html
@@ -140,6 +140,7 @@ import * as SkeletonUtils from '../../examples/jsm/utils/SkeletonUtils.js';
 function main() {
   const canvas = document.querySelector('#c');
   const renderer = new THREE.WebGLRenderer({canvas});
+  renderer.outputEncoding = THREE.sRGBEncoding;
 
   const fov = 45;
   const aspect = 2;  // the canvas default
@@ -158,7 +159,7 @@ function main() {
 
   function addLight(...pos) {
     const color = 0xFFFFFF;
-    const intensity = 1;
+    const intensity = 0.8;
     const light = new THREE.DirectionalLight(color, intensity);
     light.position.set(...pos);
     scene.add(light);
@@ -561,4 +562,3 @@ function main() {
 main();
 </script>
 </html>
-
