--- a/manual/examples/load-gltf-dump-scenegraph-extra.html
+++ b/manual/examples/load-gltf-dump-scenegraph-extra.html
@@ -40,6 +40,7 @@ import {GLTFLoader} from '../../examples/jsm/loaders/GLTFLoader.js';
 function main() {
   const canvas = document.querySelector('#c');
   const renderer = new THREE.WebGLRenderer({canvas});
+  renderer.outputEncoding = THREE.sRGBEncoding;
 
   const fov = 45;
   const aspect = 2;  // the canvas default
@@ -79,14 +80,14 @@ function main() {
   {
     const skyColor = 0xB1E1FF;  // light blue
     const groundColor = 0xB97A20;  // brownish orange
-    const intensity = 1;
+    const intensity = 0.6;
     const light = new THREE.HemisphereLight(skyColor, groundColor, intensity);
     scene.add(light);
   }
 
   {
     const color = 0xFFFFFF;
-    const intensity = 1;
+    const intensity = 0.8;
     const light = new THREE.DirectionalLight(color, intensity);
     light.position.set(5, 10, 2);
     scene.add(light);
@@ -195,4 +196,3 @@ function main() {
 main();
 </script>
 </html>
-
