--- a/manual/examples/load-obj-wat.html
+++ b/manual/examples/load-obj-wat.html
@@ -40,6 +40,7 @@ import {OBJLoader} from '../../examples/jsm/loaders/OBJLoader.js';
 function main() {
   const canvas = document.querySelector('#c');
   const renderer = new THREE.WebGLRenderer({canvas});
+  renderer.outputEncoding = THREE.sRGBEncoding;
 
   const fov = 45;
   const aspect = 2;  // the canvas default
@@ -60,6 +61,7 @@ function main() {
 
     const loader = new THREE.TextureLoader();
     const texture = loader.load('resources/images/checker.png');
+    texture.encoding = THREE.sRGBEncoding;
     texture.wrapS = THREE.RepeatWrapping;
     texture.wrapT = THREE.RepeatWrapping;
     texture.magFilter = THREE.NearestFilter;
@@ -131,4 +133,3 @@ function main() {
 main();
 </script>
 </html>
-
