--- a/manual/examples/postprocessing-3dlut-prep.html
+++ b/manual/examples/postprocessing-3dlut-prep.html
@@ -40,6 +40,7 @@ import {GLTFLoader} from '../../examples/jsm/loaders/GLTFLoader.js';
 function main() {
   const canvas = document.querySelector('#c');
   const renderer = new THREE.WebGLRenderer({canvas});
+  renderer.outputEncoding = THREE.sRGBEncoding;
   renderer.autoClearColor = false;
 
   const fov = 45;
@@ -63,6 +64,7 @@ function main() {
   {
     const loader = new THREE.TextureLoader();
     bgTexture = loader.load('resources/images/beach.jpg');
+    bgTexture.encoding = THREE.sRGBEncoding;
     const planeGeo = new THREE.PlaneGeometry(2, 2);
     const planeMat = new THREE.MeshBasicMaterial({
       map: bgTexture,
@@ -167,4 +169,3 @@ function main() {
 main();
 </script>
 </html>
-
