--- a/examples/webxr_vr_haptics.html
+++ b/examples/webxr_vr_haptics.html
@@ -43,7 +43,7 @@
 			let audioCtx = null;
 
 			// minor pentatonic scale, so whichever notes is striked would be more pleasant
-			const musicScale = [ 0, 3, 5, 7, 10, 12 ];
+			const musicScale = [ 0, 3, 5, 7, 10 ];
 
 			init();
 			animate();
