--- a/manual/examples/postprocessing-3dlut-identity.html
+++ b/manual/examples/postprocessing-3dlut-identity.html
@@ -248,16 +248,15 @@ function main() {
   const renderModel = new RenderPass(scene, camera);
   renderModel.clear = false;  // so we don't clear out the background
   const renderBG = new RenderPass(sceneBG, cameraBG);
+  const gammaPass = new ShaderPass(GammaCorrectionShader);
 
-  renderModel.clear = false;
-
-  const composer = new EffectComposer(renderer, new THREE.WebGLRenderTarget(1, 1));
+  const composer = new EffectComposer(renderer);
 
   composer.addPass(renderBG);
   composer.addPass(renderModel);
   composer.addPass(effectLUT);
   composer.addPass(effectLUTNearest);
-  composer.addPass(new ShaderPass(GammaCorrectionShader));
+  composer.addPass(gammaPass);
 
   function resizeRendererToDisplaySize(renderer) {
     const canvas = renderer.domElement;
