--- a/manual/ko/post-processing-3dlut.html
+++ b/manual/ko/post-processing-3dlut.html
@@ -167,9 +167,7 @@ const lutNearestShader = {
 <p>주석 처리했던 두 번째 쉐이더를 생성하기 위한 것입니다.</p>
 <p>그리고 각 쉐이더로 <code class="notranslate" translate="no">Pass</code>를 만듭니다.</p>
 <pre class="prettyprint showlinemods notranslate lang-js" translate="no">const effectLUT = new THREE.ShaderPass(lutShader);
-effectLUT.renderToScreen = true;
 const effectLUTNearest = new THREE.ShaderPass(lutNearestShader);
-effectLUTNearest.renderToScreen = true;
 </pre>
 <p>기존에 배경과 glTF를 별도 장면으로 분리했으므로 각 장면의 <code class="notranslate" translate="no">RenderPass</code>를 따로 생성합니다.</p>
 <pre class="prettyprint showlinemods notranslate lang-js" translate="no">const renderModel = new THREE.RenderPass(scene, camera);
@@ -178,17 +176,13 @@ const renderBG = new THREE.RenderPass(sceneBG, cameraBG);
 </pre>
 <p>다음으로 사용할 pass*를 <code class="notranslate" translate="no">EffectComposer</code>에 추가합니다.</p>
 <p>※ 편의상 <code class="notranslate" translate="no">Pass</code> 인스턴스를 pass로 번역합니다.</p>
-<pre class="prettyprint showlinemods notranslate lang-js" translate="no">const rtParameters = {
-  minFilter: THREE.LinearFilter,
-  magFilter: THREE.LinearFilter,
-  format: THREE.RGBFormat,
-};
-const composer = new THREE.EffectComposer(renderer, new THREE.WebGLRenderTarget(1, 1, rtParameters));
+<pre class="prettyprint showlinemods notranslate lang-js" translate="no">const composer = new THREE.EffectComposer(renderer);
 
 composer.addPass(renderBG);
 composer.addPass(renderModel);
 composer.addPass(effectLUT);
 composer.addPass(effectLUTNearest);
+composer.addPass(gammaPass);
 </pre>
 <p>GUI를 만들어 LUT를 바꿀 수 있도록 합니다.</p>
 <pre class="prettyprint showlinemods notranslate lang-js" translate="no">const lutNameIndexMap = {};
@@ -332,7 +326,7 @@ drawColorCubeImage(ctx, 8);
 +lutTextures.forEach((info) =&gt; {
 +  // 사이즈값이 없다면 사이즈 정보를 파일 이름에서 가져옵니다.
 +  if (!info.size) {
-+    /**    
++    /**
 +     * 파일 이름이 '-s&lt;숫자&gt;[n]' 이렇게 끝난다고 가정합니다.
 +     * &lt;숫자&gt;는 3DLUT 정육면체의 크기입니다.
 +     * [n]은 '필터링 없음' 또는 'nearest'를 의미합니다.
@@ -470,7 +464,7 @@ updateGUI();
         </div>
       </div>
     </div>
-  
+
   <script src="/manual/resources/prettify.js"></script>
   <script src="/manual/resources/lesson.js"></script>
 
