--- a/manual/examples/indexed-textures-picking-and-highlighting.html
+++ b/manual/examples/indexed-textures-picking-and-highlighting.html
@@ -99,17 +99,19 @@ function main() {
   pickingScene.background = new THREE.Color(0);
 
   const tempColor = new THREE.Color();
-  function get255BasedColor(color) {
+	function get255BasedColor(color) {
     tempColor.set(color);
-    return tempColor.toArray().map(v => v * 255);
+    const base = tempColor.toArray().map(v => v * 255);
+    base.push(255); // alpha
+    return base;
   }
 
   const maxNumCountries = 512;
   const paletteTextureWidth = maxNumCountries;
   const paletteTextureHeight = 1;
-  const palette = new Uint8Array(paletteTextureWidth * 3);
+  const palette = new Uint8Array(paletteTextureWidth * 4);
   const paletteTexture = new THREE.DataTexture(
-      palette, paletteTextureWidth, paletteTextureHeight, THREE.RGBFormat);
+      palette, paletteTextureWidth, paletteTextureHeight);
   paletteTexture.minFilter = THREE.NearestFilter;
   paletteTexture.magFilter = THREE.NearestFilter;
 
@@ -119,7 +121,7 @@ function main() {
   resetPalette();
 
   function setPaletteColor(index, color) {
-    palette.set(color, index * 3);
+    palette.set(color, index * 4);
   }
 
   function resetPalette() {
@@ -441,4 +443,3 @@ function main() {
 main();
 </script>
 </html>
-
