--- a/manual/examples/indexed-textures-random-colors.html
+++ b/manual/examples/indexed-textures-random-colors.html
@@ -101,16 +101,15 @@ function main() {
   const maxNumCountries = 512;
   const paletteTextureWidth = maxNumCountries;
   const paletteTextureHeight = 1;
-  const palette = new Uint8Array(paletteTextureWidth * 3);
-  const paletteTexture = new THREE.DataTexture(
-      palette, paletteTextureWidth, paletteTextureHeight, THREE.RGBFormat);
+  const palette = new Uint8Array(paletteTextureWidth * 4);
+  const paletteTexture = new THREE.DataTexture(palette, paletteTextureWidth, paletteTextureHeight);
   paletteTexture.minFilter = THREE.NearestFilter;
   paletteTexture.magFilter = THREE.NearestFilter;
   for (let i = 1; i < palette.length; ++i) {
     palette[i] = Math.random() * 256;
   }
   // set the ocean color (index #0)
-  palette.set([100, 200, 255], 0);
+  palette.set([100, 200, 255, 255], 0);
   paletteTexture.needsUpdate = true;
 
   {
@@ -418,4 +417,3 @@ function main() {
 main();
 </script>
 </html>
-
