--- a/examples/webgl_postprocessing_outline.html
+++ b/examples/webgl_postprocessing_outline.html
@@ -167,15 +167,7 @@
 
 				// model
 
-				const manager = new THREE.LoadingManager();
-
-				manager.onProgress = function ( item, loaded, total ) {
-
-					console.log( item, loaded, total );
-
-				};
-
-				const loader = new OBJLoader( manager );
+				const loader = new OBJLoader();
 				loader.load( 'models/obj/tree.obj', function ( object ) {
 
 					let scale = 1.0;
