--- a/examples/webxr_vr_sandbox.html
+++ b/examples/webxr_vr_sandbox.html
@@ -33,9 +33,11 @@
 			import { XRControllerModelFactory } from './jsm/webxr/XRControllerModelFactory.js';
 
 			import { GUI } from './jsm/libs/lil-gui.module.min.js';
+			import Stats from './jsm/libs/stats.module.js';
 
 			let camera, scene, renderer;
 			let reflector;
+			let stats, statsMesh;
 
 			const parameters = {
 				radius: 0.6,
@@ -193,6 +195,21 @@
 				mesh.scale.setScalar( 2 );
 				group.add( mesh );
 
+
+				// Add stats.js
+				stats = new Stats();
+				stats.dom.style.width = '80px';
+				stats.dom.style.height = '48px';
+				document.body.appendChild( stats.dom );
+
+				statsMesh = new HTMLMesh( stats.dom );
+				statsMesh.position.x = - 0.75;
+				statsMesh.position.y = 2;
+				statsMesh.position.z = - 0.6;
+				statsMesh.rotation.y = Math.PI / 4;
+				statsMesh.scale.setScalar( 2.5 );
+				group.add( statsMesh );
+
 			}
 
 			function onWindowResize() {
@@ -218,6 +235,10 @@
 				torus.rotation.y = time * 5;
 
 				renderer.render( scene, camera );
+				stats.update();
+
+				// Canvas elements doesn't trigger DOM updates, so we have to update the texture
+				statsMesh.material.map.update();
 
 			}
 
