--- a/examples/misc_exporter_draco.html
+++ b/examples/misc_exporter_draco.html
@@ -8,8 +8,7 @@
 	</head>
 	<body>
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> webgl - exporter - draco<br/><br/>
-			<button id="exportFile">Export DRC</button>
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> webgl - exporter - draco
 		</div>
 
 		<script src="js/libs/draco/draco_encoder.js"></script>
@@ -32,8 +31,13 @@
 
 			import { OrbitControls } from './jsm/controls/OrbitControls.js';
 			import { DRACOExporter } from './jsm/exporters/DRACOExporter.js';
+			import { GUI } from './jsm/libs/lil-gui.module.min.js';
 
 			let scene, camera, renderer, exporter, mesh;
+
+			const params = {
+				export: exportFile
+			};
 
 			init();
 			animate();
@@ -108,8 +112,11 @@
 
 				window.addEventListener( 'resize', onWindowResize );
 
-				const exportButton = document.getElementById( 'exportFile' );
-				exportButton.addEventListener( 'click', exportFile );
+				const gui = new GUI();
+
+				gui.add( params, 'export' ).name( 'Export DRC' );
+				gui.open();
+
 
 			}
 
