--- a/examples/misc_exporter_stl.html
+++ b/examples/misc_exporter_stl.html
@@ -8,8 +8,7 @@
 	</head>
 	<body>
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> webgl - exporter - stl<br/><br/>
-			<button id="exportASCII">export ASCII</button> <button id="exportBinary">export binary</button>
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> webgl - exporter - stl
 		</div>
 
 		<!-- Import maps polyfill -->
@@ -30,8 +29,14 @@
 
 			import { OrbitControls } from './jsm/controls/OrbitControls.js';
 			import { STLExporter } from './jsm/exporters/STLExporter.js';
+			import { GUI } from './jsm/libs/lil-gui.module.min.js';
 
 			let scene, camera, renderer, exporter, mesh;
+
+			const params = {
+				exportASCII: exportASCII,
+				exportBinary: exportBinary
+			};
 
 			init();
 			animate();
@@ -102,11 +107,11 @@
 
 				window.addEventListener( 'resize', onWindowResize );
 
-				const buttonExportASCII = document.getElementById( 'exportASCII' );
-				buttonExportASCII.addEventListener( 'click', exportASCII );
+				const gui = new GUI();
 
-				const buttonExportBinary = document.getElementById( 'exportBinary' );
-				buttonExportBinary.addEventListener( 'click', exportBinary );
+				gui.add( params, 'exportASCII' ).name( 'Export STL (ASCII)' );
+				gui.add( params, 'exportBinary' ).name( 'Export STL (Binary)' );
+				gui.open();
 
 			}
 
