--- a/examples/misc_exporter_gltf.html
+++ b/examples/misc_exporter_gltf.html
@@ -492,7 +492,7 @@
 				const gui = new GUI();
 
 				let h = gui.addFolder( 'Settings' );
-				h.add( params, 'trs' ).name( 'use TRS' );
+				h.add( params, 'trs' ).name( 'Use TRS' );
 				h.add( params, 'onlyVisible' ).name( 'Only Visible Objects' );
 				h.add( params, 'truncateDrawRange' ).name( 'Truncate Draw Range' );
 				h.add( params, 'binary' ).name( 'Binary (GLB)' );
