add a2c to another example

--- a/examples/webgl_shadowmap_pointlight.html
+++ b/examples/webgl_shadowmap_pointlight.html
@@ -62,7 +62,6 @@
 					light.add( sphere );
 
 					const texture = new THREE.CanvasTexture( generateTexture() );
-					texture.magFilter = THREE.NearestFilter;
 					texture.wrapT = THREE.RepeatWrapping;
 					texture.wrapS = THREE.RepeatWrapping;
 					texture.repeat.set( 1, 4.5 );
@@ -71,7 +70,8 @@
 					material = new THREE.MeshPhongMaterial( {
 						side: THREE.DoubleSide,
 						alphaMap: texture,
-						alphaTest: 0.5
+						alphaTest: 0.5,
+						alphaToCoverage: true
 					} );
 
 					sphere = new THREE.Mesh( geometry, material );
