--- a/examples/webgl_gpgpu_birds_gltf.html
+++ b/examples/webgl_gpgpu_birds_gltf.html
@@ -414,7 +414,7 @@
 					cohesion: 20.0,
 					freedom: 0.75,
 					size: sizes[ selectModel ],
-					count: BIRDS
+					count: Math.floor( BIRDS / 4 )
 
 				};
 
