--- a/examples/webgl_materials_car.html
+++ b/examples/webgl_materials_car.html
@@ -88,6 +88,8 @@
 				camera.position.set( 4.25, 1.4, - 4.5 );
 
 				controls = new OrbitControls( camera, container );
+				controls.enableDamping = true;
+				controls.maxDistance = 9;
 				controls.target.set( 0, 0.5, 0 );
 				controls.update();
 
@@ -196,6 +198,8 @@
 			}
 
 			function render() {
+
+				controls.update();
 
 				const time = - performance.now() / 1000;
 
