--- a/examples/webgl2_volume_cloud.html
+++ b/examples/webgl2_volume_cloud.html
@@ -104,7 +104,7 @@
 
 				}
 
-				const texture = new THREE.DataTexture3D( data, size, size, size );
+				const texture = new THREE.Data3DTexture( data, size, size, size );
 				texture.format = THREE.RedFormat;
 				texture.minFilter = THREE.LinearFilter;
 				texture.magFilter = THREE.LinearFilter;
